Provides 6 analytic data functions for UH degree data set

--- a/index.html
+++ b/index.html
@@ -1,20 +1,12 @@
-# Overview
-
-Provides 6 functions for computer analytics over the [Hawaii Open Dataset for Five Years of UH Degree Data](http://philipmjohnson.github.io/ics314f15/morea/underscore/experience-underscore.html).
-
-# Installation
-
-Provide the following scripts in your html file:
-```
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title></title>
+</head>
 <script src="//philipmjohnson.github.io/ics314f15/morea/underscore/underscore-min.js"></script>
 <script src="//philipmjohnson.github.io/ics314f15/morea/underscore/uhdata.js"></script>
 <script src="uhdatafunctions.js"></script>
-```
-
-# Usage
-
-Here are example calls to the analytic functions
-```
 <script>
   console.log(totalDegrees(uhdata));
   console.log(hawaiianLegacy(uhdata));
@@ -23,10 +15,7 @@ Here are example calls to the analytic functions
   console.log(dataForYear(uhdata, 2011));
   console.log(totalDegreesByYear(uhdata, 2010));
 </script>
-```
+<body>
 
-Consult the uhdatafunctions.js file for more details on these functions.
-
-# Credits
-
-Uses the [Underscore](http://underscorejs.org) library.
+</body>
+</html>
