Provides 7 analytic data functions for UH degree data set

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   console.log(percentageHawaiian(uhdata));
   console.log(dataForYear(uhdata, 2011));
   console.log(totalDegreesByYear(uhdata, 2010));
+  console.log(doctoralDegree(uhdata));
 </script>
 <body>
 
