Added tests for totalDegrees

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 <script src="uhdatafunctions.js"></script>
 <script>
   console.log(totalDegrees(uhdata));
-  console.log(hawaiianLegacy(uhdata));
-  console.log(totalHawaiianLegacy(uhdata));
   console.log(percentageHawaiian(uhdata));
-  console.log(dataForYear(uhdata, 2011));
-  console.log(totalDegreesByYear(uhdata, 2010));
+  console.log(totalDegreesByYear(uhdata, 2012));
+  console.log(listCampuses(uhdata));
+  console.log(listCampusDegrees(uhdata));
+  console.log(listYearDegrees(uhdata));
   console.log(doctoralDegree(uhdata));
+  console.log(testData);
 </script>
 <body>
 
